--- a/css/styles.css
+++ b/css/styles.css
@@ -185,6 +185,16 @@ h3 {
 }
 
 @media (max-width: 992px) {
+  .big-heading {
+    font-size: 2.5rem;
+  }
+
+  .download-button {
+    margin: 5% 0;
+  }
+
+  /* Title Section */
+
   #title {
     text-align: center;
   }
@@ -192,5 +202,23 @@ h3 {
   .title-image {
     position: static;
     transform: rotate(0);
+  }
+
+  /* Testimonial Section */
+
+  .testimonial-heading {
+    font-size: 2rem;
+    line-height: 1.5;
+  }
+
+  .carousel-item {
+    height: 450px;
+  }
+
+  /* Pricing Section */
+
+  .pricing-heading {
+    font-size: 2.5rem;
+    line-height: 1.5;
   }
 }
