--- a/css/styles.css
+++ b/css/styles.css
@@ -122,7 +122,7 @@ h3 {
 
 .testimonial-img {
   border-radius: 100%;
-  margin: 30px;
+  margin: 30px 20px 30px 0;
   width: 10%;
 }
 
@@ -212,7 +212,7 @@ h3 {
   }
 
   .carousel-item {
-    height: 450px;
+    height: 500px;
   }
 
   /* Pricing Section */
